bot: Allow user to define ROM name
Change-Id: I2aa8ccadb1611409bca41b0f9d0943e65336eac2
Signed-off-by: angelomds42 <angelomds42@gmail.com>

--- a/config.env.example
+++ b/config.env.example
@@ -4,6 +4,7 @@ CONFIG_CHATID="YOUR_CHAT_ID"
 CONFIG_ERROR_CHATID="ERROR_LOG_CHAT_ID" (Optional, defaults to CHATID)
 
 # Build
+CONFIG_ROM_NAME="rom_name" (e.g, PixelOS)
 CONFIG_DEVICE="device_codename" (e.g., spes)
 CONFIG_BUILD_TARGET="build_target" (e.g., bacon)
 CONFIG_BUILD_TYPE="build_variant" (e.g., userdebug)
