bot: Simplify env example
Change-Id: Iaa4ccb78a1a000ac985d920ae4e1138c279501f1

--- a/config.env.example
+++ b/config.env.example
@@ -1,15 +1,14 @@
 # Telegram
 CONFIG_BOT_TOKEN="YOUR_BOT_TOKEN"
 CONFIG_CHATID="YOUR_CHAT_ID"
-CONFIG_ERROR_CHATID="ERROR_LOG_CHAT_ID" (Optional, defaults to CHATID)
+#CONFIG_ERROR_CHATID="" (Optional: If commented out, uses the CHATID above)
 
 # Build
-CONFIG_ROM_NAME="rom_name" (e.g, PixelOS)
-CONFIG_DEVICE="device_codename" (e.g., spes)
-CONFIG_BUILD_TARGET="build_target" (e.g., bacon)
-CONFIG_BUILD_TYPE="build_variant" (e.g., userdebug)
-CONFIG_JOBS="number_of_jobs" (e.g., 8)
+#CONFIG_ROM_NAME="" (Optional: If commented out, uses the folder name)
+CONFIG_BUILD_TARGET="bacon"
+CONFIG_BUILD_TYPE="userdebug"
+#CONFIG_JOBS="" (Optional: If commented out, uses all cores)
 
 # Upload
 CONFIG_PDUP_API="your_pixeldrain_api_key"
-CONFIG_GOFILE="true" (Set to true to enable GoFile upload)
+CONFIG_GOFILE="true"
