bot: Add missing CONFIG_DEVICE to env example
Change-Id: Ia24a7545b623c31bcdfe8b466a852bfda3de6ed7
Signed-off-by: angelomds42 <angelomds42@gmail.com>

--- a/config.env.example
+++ b/config.env.example
@@ -5,6 +5,7 @@ CONFIG_CHATID="YOUR_CHAT_ID"
 
 # Build
 #CONFIG_ROM_NAME="" (Optional: If commented out, uses the folder name)
+CONFIG_DEVICE="spes"
 CONFIG_BUILD_TARGET="bacon"
 CONFIG_BUILD_TYPE="userdebug"
 #CONFIG_JOBS="" (Optional: If commented out, uses all cores)
